--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8082
-spring.application.name=Customer-service
-spring.cloud.discovery.enabled=false
+spring.application.name=customer-service
+spring.cloud.discovery.enabled=true
 spring.datasource.url=jdbc:h2:mem:db-customerService
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
